<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text"
        android:layout_width="324dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text_msg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonMain"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="61dp"
        android:text="@string/text_btnMain" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMain"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="65dp"
        android:text="@string/text_next" />

</RelativeLayout>
